<resources>
    <string name="app_name">Desafio Firebase</string>
    <string name="action_settings">Settings</string>
    <string name="search_games">Search Games</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_year_creation">Year of Creation</string>
    <string name="action_save_game">Save Game</string>
    <string name="prompt_description">Description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_sign_in">Log In</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Create account</string>
    <string name="prompt_remember">Remember</string>
</resources>