<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".screen.fragment.GameDataFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">



        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            android:background="@drawable/rounded_edge"
            android:backgroundTint="@color/white"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:paddingTop="80dp"
            android:paddingBottom="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/prompt_name"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_created_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_year_creation"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_description"
                    android:inputType="textMultiLine" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/action_save_game" />

        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_photo_game"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-60dp"
            android:background="@drawable/rounded_button"
            android:scaleType="centerCrop"
            app:civ_border_color="@color/red_200"
            app:civ_border_width="2dp"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/btn_selected_photo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-60dp"
            android:background="@drawable/rounded_button"
            android:drawableTop="@drawable/ic_baseline_photo_camera"
            android:paddingTop="30dp" />

    </RelativeLayout>


</RelativeLayout>